--- a/app/src/main/res/layout/fragment_destination.xml
+++ b/app/src/main/res/layout/fragment_destination.xml
@@ -11,12 +11,21 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/fromTextView"
+            android:id="@+id/transportLineName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/spacing_normal"
-            android:text="Tynnered"
+            android:text="99"
+            android:textAppearance="?android:attr/textAppearanceLarge"/>
+
+        <TextView
+            android:id="@+id/transportLineDirection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="Riktning"
+            android:layout_marginLeft="@dimen/spacing_small"
             android:textAppearance="?android:attr/textAppearanceLarge"/>
 
         <TextView
@@ -29,12 +38,12 @@
             android:textAppearance="?android:attr/textAppearanceMedium"/>
 
         <TextView
-            android:id="@+id/toTextView"
+            android:id="@+id/transportFromStop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="16dp"
-            android:text="Vasaplatsen"
+            android:text="Hållplats"
             android:textAppearance="?android:attr/textAppearanceLarge"/>
     </LinearLayout>
 
