--- a/app/src/main/res/drawable-xxhdpi/ticket_button.xml
+++ b/app/src/main/res/drawable-xxhdpi/ticket_button.xml
@@ -6,35 +6,8 @@
             android:innerRadiusRatio="2.63"
             android:shape="ring"
             android:thicknessRatio="216">
-            <gradient
-                android:centerColor="#E2E2E2"
-                android:endColor="#E2E2E2"
-                android:startColor="#E2E2E2"
-                android:type="sweep" />
+            <solid
+                android:color="@color/primary_color" />
         </shape>
-    </item>
-    <item android:id="@android:id/progress">
-        <rotate
-            android:fromDegrees="270"
-            android:pivotX="50%"
-            android:pivotY="50%"
-            android:toDegrees="270">
-            <shape
-                android:useLevel="true"
-                android:innerRadiusRatio="2.63"
-                android:shape="ring"
-                android:thicknessRatio="216">
-                <rotate
-                    android:fromDegrees="0"
-                    android:pivotX="50%"
-                    android:pivotY="50%"
-                    android:toDegrees="360" />
-                <gradient
-                    android:centerColor="#909087"
-                    android:endColor="#909087"
-                    android:startColor="#909087"
-                    android:type="sweep" />
-            </shape>
-        </rotate>
     </item>
 </layer-list>
